# irrigation_system

./: .cproject  .gitignore  .mxproject  .project  LICENSE  control_de_riego Debug.launch  control_de_riego.ioc
Core/Inc/: FreeRTOSConfig.h
Core/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c
Debug/: .gitignore  control_de_riego.elf  control_de_riego.list  control_de_riego.map
Design/: SRS.md
Documentation/: Doxyfile
Documentation/html/: annotated.html  classes.html  dir_409f97388efe006bc3438b95e9edef48.html  dir_aefb46660925f100dc8a97c07e1702e3.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  html_8txt.html  index.html  menudata.js  readme_8md.html  sensors_gatekeeper_8h.html  sensors_gatekeeper_8h_source.html  sensors_gatekeeper__internal_8c.html  sensors_gatekeeper__internal_8h.html  sensors_gatekeeper__internal_8h_source.html  sensors_gatekeeper__public_8c.html  sensors_gatekeeper__public_8h.html  sensors_gatekeeper__public_8h_source.html  sensors_gatekeer_8c.html  structstruct__sensor.html  structstruct__sensor__measure.html
Implementation/Unit_tests/irrigation_manager_unit_test/: CMakeLists.txt  Irrigation_manager.cpp  Irrigation_manager.h  irrigation_manager_test.cpp  mock-RTC.h  mock-calendar_routine.h  mock-irrigation_zone.h
Implementation/manual_test/: cmain.cpp
components/config/: configuration.h
components/dataLogger/: dataLogger.c  dataLogger.h
components/executionUnit/: executionUnit.c  executionUnit.h
(+98 files in other folders)
